log
Thu 25 Apr 2024 04:25:09 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:15: error: lvalue required as left operand of assignment
   57 |     map->size = 0;
      |               ^
Compilation failed
72ef2b5
Thu 25 Apr 2024 04:26:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2f458ac
